--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
     "boe-list": "SupportClass/boe-list#^0.2.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
   }
 }
