--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2",
     "boe-list": "SupportClass/boe-list#^0.2.0",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
