--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lfg-nucleus",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "dependencies": {
     "clone": "^1.0.3",
     "numeral": "^1.5.3",
@@ -16,7 +16,7 @@
     "static": "eslint dashboard/**/*.js extension/**/*.js"
   },
   "nodecg": {
-    "compatibleRange": "~0.9.0",
+    "compatibleRange": "^1.0.0",
     "bundleDependencies": {
       "lfg-filter": "^4.0.0"
     },
